duicontrolpanel (0.12.10~unreleased) unstable; urgency=low

  * Fixes: NB#235703 - COREWEB

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 04 Apr 2011 15:31:36 +0200

duicontrolpanel (0.12.9) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: emitting DcpWidget::closePage on first page of the applet
    leads to a window without pages
  * Fixes: DcpWidget::back() can not prevent closing the first page of
    the applet
  * New: example applet for multiple page situation
  * Updates according to the layout guide
  * Support for an additional .desktop file directory under /usr/share
  * Updates the declarative example to have group titles

  [ Sandor Pinter ]
  * Fixes: NB#239966 - Bluetooth icon in settings
  * Fixes: NB#239969 - Device icon in Settings is incorrect

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 31 Mar 2011 16:18:41 +0200

duicontrolpanel (0.12.8.1) unstable; urgency=low

  * Fixes: NB#231725 - Help view is shown on relaunching the settings
    application, it doesn't switch back

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 24 Mar 2011 16:57:01 +0100

duicontrolpanel (0.12.7.2) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#238601 - Notifications and Events feed settings are not
    implemented according to the UI specs

  [ Robert Manner ]
  * Workaround for NB#239045 - Settings application shows toolbar
    background in white color

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 23 Mar 2011 12:14:15 +0100

duicontrolpanel (0.12.6) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#237302 - Brightness control level

  [ Sandor Pinter ]
  * Fixes: NB#238276 - Settings; 'Flight mode' toggle button layout is
    not align with the label
  * Fixes: NB#238251 - Settings; layout of Arrows are inconsistent;
    supposed to be vertical center with label option
  * Fixes: NB#230172 - Connectivity, internet connections view, labels
    are not aligned correctly when in offline mode and also after