@@ -8,5 +8,7 @@ Icon=icon-m-settings-reset
 Aliases=qtn_sett_main_reset
 Translation-catalogs=
 
+HelpId=IDUG_MEEGO_SETT_RESTORE.html
+
 Order=110
 
