@@ -1,6 +1,16 @@
 /*! \page news What's New in DuiControlPanel
 
-\section v0A8 0.11.8
+
+\section v0CA 0.12.10
+\subsection new New features
+Help can be specified for a category page, see the HelpId key in the category
+documentation.
+
+\section v0C9 0.12.9
+\subsection new New features
+Applet .desktop files can also be under /usr/share/duicontrolpanel/desktops
+
+\section v0B8 0.11.8
 \subsection new New features
 Applet auto starting if a category contains one applet only can
     be customized via AutoStartApplet key
@@ -8,7 +18,7 @@ Applet auto starting if a category contains one applet only can
 Category names have changed for non-meego targets, applets
     have to recheck their categories
 
-\section v0A7 0.11.7
+\section v0B7 0.11.7
 \subsection new New features
 - New briefview type "Slider". To use it, an applet has to reimplement
   DcpBrief::setValue(), DcpBrief::value() etc., and specify "Slider" as its
@@ -17,18 +27,18 @@ Category names have changed for non-meego targets, applets
   applet has to specify "TextOrientation=Horizontal" in the [DCP] section of
   its .desktop file.
 
-\section v0A6 0.11.6
+\section v0B6 0.11.6
 \subsection new New features
 - It is now configurable if the category icons are above or
   below the applet icons using the ComponentOrder key in the
   .cpcategory files
 
-\section v0A5 0.11.5
+\section v0B5 0.11.5
 \subsection new New features
 - the applet can specify in its .desktop file if it has a
   mainview through DCP/HasMainView key
 
-\section v0A0 0.11.0
+\section v0B0 0.11.0
 \subsection new New features
 - New applet categories can be added through ini files, see
   <a href="categories.html"> this for details</a>.
